@@ -12,6 +12,9 @@ What's New in Python 3.2 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #8092: Fix PyUnicode_EncodeUTF8() to support error handler producing
+  unicode string (eg. backslashreplace)
+
 - Issue #8485: PyUnicode_FSConverter() doesn't accept bytearray object anymore,
   you have to convert your bytearray filenames to bytes
 
